# ragt.ag

./: .gitignore  README.md  pyproject.toml
ragt_ag/: __init__.py
ragt_ag/static/: screen.css
ragt_ag/templates/: index.html  template.html
